# minecraft_cpp

./: CMakeLists.txt  main.cpp
engine/: Window.h  buffers.h  engine.h  fonts.h  logging.h  shaders.h  text-rendering.h  textures.h
libraries/glad/include/glad/: gl.h
minecraft/client/: client.h
minecraft/client/render/: chunk_renderer.h  client_2d_renderer.h  client_block_renderer.h  client_render.h  world_renderer.h
minecraft/common/: blocks.h  common.h  constants.h  logging.h  utils.h  world.h
